--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build with Maven
       run: mvn package -B -Dmaven.test.skip
     - name: Setup Docker buildx
-      uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+      uses: docker/setup-buildx-action@v2
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
@@ -36,11 +36,11 @@ jobs:
         password: ${{ secrets.DOCKER_HUB_PASSWORD }}
     - name: Extract metadata (tags, labels) for Docker
       id: meta
-      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      uses: docker/metadata-action@v4
       with:
         images: ${{ env.IMAGE_NAME }}
     - name: Build and push Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      uses: docker/build-push-action@v3
       with:
         context: .
         push: true
